--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+html, body, :root{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+@layer components{
+  .btn {
+    @apply bg-blue-500 font-medium text-white shadow-lg hover:shadow font-bold py-2 px-4 rounded hover:scale-105 duration-200 hover:bg-blue-600 active:scale-95;
+  }
+  .input {
+    @apply px-4 py-3 ring outline-none duration-200 ease-linear bg-gray-100 rounded-lg  ring-gray-300  focus:ring-2 focus:ring-blue-500 focus:border-transparent
+  }
+}
